# Sudoku_Automation_Solver

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  GITHUB_PREPARATION_CHECKLIST.md  GITHUB_SETUP.md  INSTALLATION.md  MANIFEST.in  PRODUCTION_DEPLOYMENT.md  Procfile  README.md  REPOSITORY_CLEANUP_PLAN.md  REPOSITORY_OPTIMIZATION_SUMMARY.md  SYSTEM_DESIGN.md  pyproject.toml  render.yaml  requirements.txt  setup.py  verify_installation.py
backend/: PORT_MANAGEMENT.md  SERVER_STATUS.md  __init__.py  main.py  requirements.txt
backend/app/: __init__.py
backend/app/models/: __init__.py
backend/app/routes/: __init__.py
backend/app/services/: __init__.py  digit_recognizer.py  image_processor.py  sudoku_solver.py
backend/app/utils/: __init__.py  validators.py
backend/tests/: __init__.py
docs/: DEVELOPER_GUIDE.md
frontend/: index.html  script.js  style.css
server/: digit_recognition.py  digit_recognition_old.py  main.py
