[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sudoku-automation-solver"
version = "4.0.0"
description = "High-accuracy Sudoku extraction and solving system"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11,<3.14"

dependencies = [
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0",
    "python-multipart==0.0.6",
    "opencv-python-headless==4.8.1.78",
    "numpy==1.24.3",
    "pydantic==2.5.0",
    "pydantic-settings==2.1.0",
    "scikit-learn==1.3.2",
    "joblib==1.3.2",
    "gunicorn==21.2.0",
]

[tool.setuptools.packages.find]
where = ["backend"]
